--- a/src/styles/Dashboard.css
+++ b/src/styles/Dashboard.css
@@ -1,10 +1,9 @@
 .proposalBlock {
-  /*position: inherit;*/
+  position: relative;
   width: 600px;
   height: 170px;
-
+  z-index: 6000;
   background: #FFFFFF;
-  /* WHITE */
   border: 1px solid #FFFFFF;
   box-sizing: border-box;
   /* Color-drop-fade */
@@ -14,25 +13,17 @@
   padding: 20px 30px 20px 30px;
 }
 
-
 .priceDao {
   position: absolute;
-
   right: 4%;
   top: 8.5%;
-
   width: 150px;
   height: 200px;
   background: #FFFFFF;
-  /* Light2 */
-
   border: 1px solid #F0F0F0;
   box-sizing: border-box;
-  /* Color-drop */
-
   box-shadow: 3px 5px 4px rgba(27, 43, 65, 0.05), -3px -3px 8px rgba(201, 75, 50, 0.1);
   border-radius: 10px;
-
 }
 
 .priceDaoTop {
@@ -41,12 +32,8 @@
   font-weight: 400;
   font-size: 30px;
   line-height: 30px;
-  /* or 100% */
-
   align-items: center;
   text-align: center;
-
-
   color: rgba(27, 43, 65, 0.6);
 }
 
@@ -57,11 +44,8 @@
   font-size: 15px;
   line-height: 15px;
   padding-top: 5px;
-  /* or 100% */
-
   align-items: center;
   text-align: center;
-
   color: rgba(27, 43, 65, 0.6);
 }
 
@@ -84,19 +68,13 @@
 
 .topDaoMembers {
   position: absolute;
-
   right: 4%;
   top: 46%;
-
   width: 150px;
   height: 265px;
   background: #FFFFFF;
-  /* Light2 */
-
   border: 1px solid #F0F0F0;
   box-sizing: border-box;
-  /* Color-drop */
-
   box-shadow: 3px 5px 4px rgba(27, 43, 65, 0.05), -3px -3px 8px rgba(201, 75, 50, 0.1);
   border-radius: 10px;
   font-family: 'Open Sans';
@@ -104,11 +82,8 @@
   font-weight: 400;
   font-size: 14px;
   line-height: 18px;
-  /* identical to box height, or 129% */
-
   text-align: start;
   letter-spacing: -0.011em;
-
   color: #919191;
 }
 
@@ -119,45 +94,13 @@
   height: 20px;
   right: 287px;
   top: 35px;
-
   font-family: 'Insignia';
   font-style: normal;
   font-weight: 400;
   font-size: 25px;
   line-height: 20px;
-  /* identical to box height, or 80% */
-
   text-align: right;
   color: #76808D;
-}
-
-.accountInfo {
-  position: absolute;
-  right: 16%;
-  top: 4%;
-  width: 120px;
-  height: 30px;
-  align-content: center;
-
-  background: #FFFFFF;
-  /* Color-drop */
-  align-items: center;
-  text-align: center;
-  box-shadow: 3px 5px 4px rgba(27, 43, 65, 0.05), -3px -3px 8px rgba(201, 75, 50, 0.1);
-  border-radius: 30px;
-
-  font-family: 'Open Sans';
-  font-style: italic;
-  font-weight: 400;
-  font-size: 14px;
-  line-height: 18px;
-  padding: 5px 5px 5px 25px;
-  /* identical to box height, or 129% */
-
-  display: flex;
-  letter-spacing: -0.011em;
-
-  color: #919191;
 }
 
 
@@ -225,7 +168,6 @@
   font-weight: 400;
   font-size: 14px;
   line-height: 15px;
-  /* identical to box height, or 107% */
   width: 50%;
   display: flex;
   align-items: end;
@@ -239,12 +181,8 @@
   font-weight: 700;
   font-size: 18px;
   line-height: 25px;
-  /* or 139% */
-
   letter-spacing: -0.011em;
   text-transform: uppercase;
-  /* GREEN */
-
   color: #458343;
   display: flex;
 }
@@ -263,7 +201,6 @@
   min-height: 265px;
   /*left: 132px;*/
   top: 811px;
-
   /*box-sizing: border-box;*/
   /*width: 286px;*/
   /*height: 342px;*/
@@ -272,7 +209,6 @@
   padding: 15px 15px 15px 15px;
   align-items: center;
   /*top: 0px;*/
-
   background: #F5F5F5;
   border: 1px solid #FFFFFF;
   border-radius: 10px;
