--- a/src/styles/Modal.css
+++ b/src/styles/Modal.css
@@ -3,6 +3,7 @@
   height: 100vh;
   background-color: rgb(0 0 0 / 40%);
   position: fixed;
+  z-index: 9999;
   display: flex;
   justify-content: right;
   align-items: center;
@@ -11,6 +12,7 @@
 .modalContainer {
   width: 550px;
   height: 650px;
+  z-index: 9999;
   border-radius: 12px 0px 0px 12px;
   background-color: white;
   box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
