--- a/src/styles/Sidebar2.css
+++ b/src/styles/Sidebar2.css
@@ -1,9 +1,10 @@
 #sidebar {
     position: absolute;
-    width: 500px;
+    width: 400px;
+    z-index: 1000;
 }
 #sidebar .pro-sidebar {
-    height: max-content;
+    height: 1200px;
 }
 #sidebar .closemenu {
     color: #000;
@@ -76,8 +77,8 @@
     /* or 107% */
 
     text-align: center;
-    block-size: 80px;
-    padding: 20px 20px 0px 20px;
+    block-size: 100px;
+    padding: 20px 80px 0px 20px;
 
     color: #FFFFFF;
 
@@ -93,6 +94,7 @@
     /* identical to box height, or 111% */
 
     display: flex;
+    padding-bottom: 10px;
     align-items: center;
     letter-spacing: -0.011em;
     text-transform: uppercase;
