--- a/frontend/src/styles/App.css
+++ b/frontend/src/styles/App.css
@@ -1,5 +1,6 @@
 .App {
   text-align: center;
+  /*background: linear-gradient(169.22deg, #FDF7F7 12.19%, #EFEFEF 92%, #DD6149 92%);*/
 }
 
 .App-logo {
